# ChangeLog for net-analyzer/netsniff-ng
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netsniff-ng/ChangeLog,v 1.10 2014/09/01 16:24:28 xmw Exp $

*netsniff-ng-0.5.9_rc3 (01 Sep 2014)

  01 Sep 2014; Michael Weber <xmw@gentoo.org> +netsniff-ng-0.5.9_rc3.ebuild,
  -netsniff-ng-0.5.8_rc2.ebuild, -netsniff-ng-0.5.8_rc3.ebuild:
  Version bump (bug 520318).

*netsniff-ng-0.5.8 (01 Sep 2014)

  01 Sep 2014; Michael Weber <xmw@gentoo.org> +netsniff-ng-0.5.8.ebuild:
  Version bump (bug 520318).

*netsniff-ng-0.5.8_rc3 (03 Dec 2013)

  03 Dec 2013; Michael Weber <xmw@gentoo.org> +netsniff-ng-0.5.8_rc3.ebuild:
  Version bump, add epatch_user as requested by Olipro on bug 481756.

*netsniff-ng-0.5.8_rc2 (05 Aug 2013)

  05 Aug 2013; Michael Weber <xmw@gentoo.org>
  +files/netsniff-ng-0.5.8-fortify_source.patch,
  +files/netsniff-ng-0.5.8-libcli-test.patch, +netsniff-ng-0.5.8_rc2.ebuild,
  metadata.xml, netsniff-ng-9999.ebuild:
  Version bump, update ebuild, verbose build, drop useflags.

*netsniff-ng-9999 (31 May 2013)

  31 May 2013; Michael Weber <xmw@gentoo.org> +netsniff-ng-9999.ebuild,
  metadata.xml:
  Add live version in preparation of 0.5.7 version bump.

*netsniff-ng-0.5.7-r1 (07 Nov 2012)

  07 Nov 2012; Michael Weber <xmw@gentoo.org> -netsniff-ng-0.5.6.ebuild,
  -netsniff-ng-0.5.7.ebuild, +netsniff-ng-0.5.7-r1.ebuild:
  Revbump to mark libnl dependency (thanks Khayyam, bug 439858), switch to
  upstream release tarball (thanks ago), drop old.

*netsniff-ng-0.5.7 (02 Jul 2012)

  02 Jul 2012; Michael Weber <xmw@gentoo.org> +netsniff-ng-0.5.7.ebuild:
  Version bump (bug 424415, thanks Khayyam)

  29 May 2012; Michael Weber <xmw@gentoo.org> -netsniff-ng-0.5.5.0.ebuild,
  netsniff-ng-0.5.6.ebuild, +files/netsniff-ng-0.5.6-man-no-compress.patch:
  Remove manpage compression from build-system (bug 418175, thanks Jason
  Donenfeld)

*netsniff-ng-0.5.6 (07 Apr 2012)
