@@ -7,18 +7,18 @@ AUX netsniff-ng-0.5.8-libcli-test.patch 286 SHA256 2d16a17bf04098b4bd0f68463fd74
 DIST netsniff-ng-0.5.7-r1.tar.gz 2957112 SHA256 ab4e1ef6aadb00b998349aff66e4e1cec53910113344c53ac8eb947fd46b5e89 SHA512 b400d8b21edb4395b946ac105bbb25a83330151e09d1efd130537375930ea03b928c166b792f44ccbacfa72f9de818c37553a0be98970c26da5ba255a1f2d6c1 WHIRLPOOL b83e1351e60fdaa076e611fd308b61be549a1cc6663f6039affd3fa3be002ec485776f67ceba54879584fc1822a9ad178141833ac5522d2444e67859cf8fbe58
 DIST netsniff-ng-0.5.8.tar.xz 523616 SHA256 c413e7f34bd9bd80937cd8d4bcd6780e126e2ffccc3dc34b271f105efd622e44 SHA512 1d58cf7a5388b8adb4512d97150992d6b8ebe43910442b952cecd8d03898a2e51f721711f2d1b406cbd00b4ccb548e33da4cb95530d7e92f082eea6b08efec99 WHIRLPOOL a73b8d67d5ca2cc40d5c9e1535f0a50a7968f102a1a5684f8bec0e7079140c0605dace126de23abca3f53a31db90da8f5fedeca0eea27621983743d88d74d416
 DIST netsniff-ng-0.5.9-rc3.tar.xz 525204 SHA256 dba8aaefbb1cf59e629e4fcb369be22e4817e132e0e0cca781c424b46b67d87c SHA512 060e356cd7d80bd9ab163a7474a0718d2429ae88711bb6ae804a2fe3c8afc052d115412aa5cb324bbeb1ef49bdfcf257b0016c7b8051056c339124272bf1311d WHIRLPOOL 2c19c706346b1ab0dc9dcd81217ac3fd27495ae7a94aac9185f9cfe412614a494dc3442d47ce35ec4bca4b8d1813504cebc406081c3b1ed2a5f3ae561350eaf7
+DIST netsniff-ng-0.5.9.tar.xz 541304 SHA256 e0156074bdd146dd71edcd63fa3944b658a3bce5279e0a4128578636a9700b6c SHA512 ebcfc1569f6c2380ebd4f797614da37eaba08991478d776b547c5f68f0f2df0548339c30f9487f73f1963b71eb4b4fccf3d2bd87d5574893494f0ca0534eb0d8 WHIRLPOOL e8f9d973e50eca1dcf21faf17ab351d8e92e32464878a2bdd0d0ff633c6a33aee4be8e765e24996dc81441139587092da374a34b41437af838aab08512d18eae
 EBUILD netsniff-ng-0.5.7-r1.ebuild 728 SHA256 31c4c3bba827b3c01be304aadcb53ab0332c7dc8110ee39f10b94f13315c737a SHA512 6bc21116ce8fbb1325655595a23e221776e071e99a6546ebce36a7d52de80dee09878692172c1668374794a5966de74a7b4b5334432ec71143dac0ecd4f3319f WHIRLPOOL 78c34ac745d35526271310c95ea4f02093de754636d4c9af7a836f5676bdf7659d717f4b82e0b3442746afb6c8357f64250fae464dd7ff2e0001ffe504bb34a7
 EBUILD netsniff-ng-0.5.8.ebuild 1459 SHA256 f70c750eedf3792b65f08d7be4997f5f844259e2468c7dbf7729a12378b1d315 SHA512 3412f48ab5c5eb9a28c4c52350c0782c0e37f3b35d06f0653b386ab6d0c8f58ca4068c4f4c7bde1cc2e76d185cf9cab82aded356d3934598fd8279fb71f513d0 WHIRLPOOL d25cfce4a717beaf35690956b358f38f466f935a06da87ad49e3024b1752d744621dfc7010a88e587f20732abdfd54b31cc21aa0d9ac336865e5cd5f324674b6
+EBUILD netsniff-ng-0.5.9.ebuild 1443 SHA256 c0670f7dfe9653b4ea079f5849279bad5986c255b4a82ee2cacd52902dc082bd SHA512 0f88a208af1d7d5a42dd9744e21e7fea1bab2885f468cc289dc9cfb41cb277dde11079813a2fdcc3e97017b06143080ade14aeddbbaf0a5a012aac4e81f0a20c WHIRLPOOL 62e78d12175081a4db2ade49bc8f42421798a65f45bfa7ffb1fb3c38d71bd317f8a934b1aa7d34f64e60ad2c99495b9f00283a6dccfa98f70c0dd7fa690cbfc4
 EBUILD netsniff-ng-0.5.9_rc3.ebuild 1463 SHA256 3cd0d1e1d87543c385c3714a15bb4d811e5559338b87c24bf94ef211a8f7bbfd SHA512 1fcf67b7a9a75976676c2f770d0e61b1cb5d5531204de2dc2008cfbc9fc0053a1926c5b85ad863f92efd4077c732d3801f9f0d1e204241ce8ca49166e8915c0f WHIRLPOOL 44e03c68d85f0c5efed5619392559361c90e778a9ddea428eaa68040b6bfc4a9f221af75f4ecce96260735941a9605043df199acff6d707a6e026d11ce9f4a2a
-EBUILD netsniff-ng-9999.ebuild 1513 SHA256 f23d6037a8d1395731d1b5870db79a679c4636781ca05963c3a020357517ffb0 SHA512 ad866427859dca20410f49568ebeefb7ae0dc6b47736856ef8d9343b5918b8e21c7a18985cd5294e891783287afe759d48c4fd1577e61ebc840a2e4dfdb9d210 WHIRLPOOL eb12d917dcc62b654c876d5172cb1f3562caedf881fc12cc0bc4c7f7518a38b51a8bde401e16694890a54e5ea68646c4a0f1f38e5219d02ccb861dd0e8ca0287
-MISC ChangeLog 2248 SHA256 6745975a61f2580b2f0ae7080d08d4cd64c968e789637fd86457338be29c5b97 SHA512 3db5f1542d85c141bd9f74c76d7bc2984c0c441dd306dd5e8723476360a1f1970b4c319c8b118f6c1e14dda655f014c7211ae655efeace04aecd20d6e59fe7bb WHIRLPOOL ea37b27241bee067332d6298f47e3140324b187db497255daf0cd70c3c48608f9cdc274881c5fe3ea390fb72c68adf3d0dae5699255ad14889dad35108bb88e9
+EBUILD netsniff-ng-9999.ebuild 1440 SHA256 fd657a938930ba17cf36b82f5ad8a707c0bc78bae6471727e80295635f3689fb SHA512 e3b6b30baa1b52c7ee0fa5dafb5d57de3a21ac7f6aa831fc33f07abed7fb623e3df97a7a2ca5806bf04d1356dab6c5457ff937e7101b8cbcb96038c8bd68680d WHIRLPOOL dc974f9263d5fa2b58e512c9eec14215b304560c1cd14fbc3df8e2a6a7a7fed7757f333d7e0eb583642b1b73ea77f0ccef84d07a24cc1d29456b525d9f842f43
+MISC ChangeLog 2453 SHA256 5723f51f1dc88928355aa1938b8952091838f5c8f2932b0a3559db7ddacbace2 SHA512 ada02dbddc459879eb280e61e2ad00b42cfd6f3a195592268e562a1e74e6b1d47e1d235521af1ca5e9654481178e9127352d4e9cfe9cb3e6d6969038b23765c4 WHIRLPOOL c8f020528f47287101fadd813af65dea7f0080ec855d3339656f4eaef0589608b604bfbe55094009963c9bf8e681cd7800e389c998a525a879ac0527be0092bd
 MISC metadata.xml 224 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7 SHA512 4f78d959809ec0db2f9be2a7747d572fa8ee03d177044dd46574881a6ee83736510b76062c12daecae609282d197ba466e8a3e3a654b1383e04c659acd41bef5 WHIRLPOOL 0300a228d371c918b051bc24859dfe4e5d0d2a71b80f697f202749c5aca69efcee4be6e69454c9abfa4ced28e19a9d1f71d6d7eaf54290b8d03b5c04fd209868
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iL4EAREIAGYFAlQEncBfFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
-bnBncC5maWZ0aGhvcnNlbWFuLm5ldDY3QjA4MzdGODg1NUMxMjIzNUQ0MDgxNzky
-N0FERDBDNjJFRUYwOTAACgkQknrdDGLu8JAVEAD9F7oz+ZAXsl3CQIXSwP+6w3Fz
-jYoDsGCOxzzywaBtggUA/3a5FR7GZ+sNLNorkte3OFAbAjLozeHyOzyplatmtOc5
-=kKip
+iF4EAREIAAYFAlWuz1YACgkQknrdDGLu8JBFBwD/ZJ/9IeUvlEDhlcCJqw+VXDgC
+gxmzbryvzYi0vpCeny4A/1qn2dD9BawssR+Gez+eRDomOSHx97f2t1jDob/97yMv
+=zeJ+
 -----END PGP SIGNATURE-----
