@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/netsniff-ng
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netsniff-ng/ChangeLog,v 1.10 2014/09/01 16:24:28 xmw Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/netsniff-ng/ChangeLog,v 1.11 2015/07/21 23:01:41 xmw Exp $
+
+*netsniff-ng-0.5.9 (21 Jul 2015)
+
+  21 Jul 2015; Michael Weber <xmw@gentoo.org> +netsniff-ng-0.5.9.ebuild,
+  netsniff-ng-9999.ebuild:
+  Versin bump (thanks Manuel Rüger, bug 555444), update live ebuild.
 
 *netsniff-ng-0.5.9_rc3 (01 Sep 2014)
 
